# api/controllers/Organization.js
@@ -5,14 +5,14 @@ var Organization = require('../services/OrganizationService');
 var express = require('express');
 var router = express.Router();
 
-router.get('/', getAllOrganization);
-router.get('/:organizationId/:sortBy', getOrganization);
-router.delete('/:organizationId', deleteOrganization);
-router.post('/', createOrganization);
-router.put('/', updateOrganization);
-router.patch('/', updateSingleOrganization);
+// router.get('/', getAllOrganization);
+// router.get('/:organizationId/:sortBy', getOrganization);
+// router.delete('/:organizationId', deleteOrganization);
+// router.post('/', createOrganization);
+// router.put('/', updateOrganization);
+// router.patch('/', updateSingleOrganization);
 module.exports = {
-  getAllOrganization: getAllOrganization,
+  getOrganization: getOrganization,
   createOrganization: createOrganization,
   updateOrganization: updateOrganization,
   deleteOrganization: deleteOrganization
@@ -24,16 +24,33 @@ module.exports = {
 */
 
 
-function getAllOrganization (req, res, next) {
-  // console.log("req======>", req);
-  Organization.getAllOrganization()
+function getOrganization (req, res, next) {
+  var orgId = req.swagger.params.orgId.value;
+  var sort = req.swagger.params.sortBy.value || "orgId_asc";
+  var searchBy = req.swagger.params.searchBy.value
+  if(sort){
+    var sortBy = sort.split("_")[0];
+    var value = sort.split("_")[1];
+    if (value === "asc")
+    {
+      var sortValue = 1;
+    }else if (value === "desc"){
+      var sortValue = -1;
+    }else{
+      var error = {
+        message:'Bad request'
+      }
+      res.json(error);
+    }
+  }
+  Organization.getOrganization(orgId,sortBy,sortValue,searchBy)
     .then(function (response) {
+      // console.log(response);
       res.json(response)
-      console.log(response);
     })
     .catch(function (response) {
+      // console.log(response);
       res.json(response)
-      console.log(response);
     });
 };
 
@@ -44,18 +61,7 @@ function deleteOrganization (req, res, next) {
       res.json(response)
     })
     .catch(function (response) {
-      res.json(response)
-    });
-};
-
-function getOrganization (req, res, next) {
-  var organizationId = req.params.organizationId;
-  var sortBy = req.params.sortBy;
-  Organization.getOrganization(organizationId,sortBy)
-    .then(function (response) {
-      res.json(response)
-    })
-    .catch(function (response) {
+      console.log("err======>",response);
       res.json(response)
     });
 };
